@@ -37,10 +37,24 @@ Rev. history : 2018-04-23
 Version : 0.7.1
 	Removed RESOURCE_LEAK hazard.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)	
+
+Rev. history : 2018-07-27
+Version : 0.7.2
+	Revised setting header field function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-05-22
+Version : 0.9.1
+	Add server stop function.
+Modifier : Yunho Choi (choiking10@kaist.ac.kr)
 */
 /* -------------------------------------------------------- */
 
-import java.io.BufferedInputStream;
 import java.io.BufferedWriter;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -53,14 +67,18 @@ import java.net.InetSocketAddress;
 import java.net.URI;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 
-import sun.misc.BASE64Encoder;
 
 class MMSRcvHandler {
 	HttpServer server = null;
@@ -69,7 +87,9 @@ class MMSRcvHandler {
 	//OONI
 	FileReqHandler frh = null;
 	//OONI
-	private static final String USER_AGENT = "MMSClient/0.7.1";
+	private static final String USER_AGENT = MMSConfiguration.USER_AGENT;
+	private static final int NO_OF_THREADPOOL = 1;
+	private ExecutorService serverExecutor;
 	private String TAG = "[MMSRcvHandler";
 	private String clientMRN = null;
 	
@@ -78,7 +98,9 @@ class MMSRcvHandler {
 		hrh = new HttpReqHandler();
         server.createContext("/", hrh);
         if(MMSConfiguration.DEBUG) {System.out.println(TAG+"Context \"/\" is created");}
-        server.setExecutor(null); // creates a default executor
+
+        serverExecutor = Executors.newFixedThreadPool(NO_OF_THREADPOOL);
+        server.setExecutor(serverExecutor); 
         server.start();
 	}
 
@@ -91,7 +113,11 @@ class MMSRcvHandler {
 		
         server.createContext(context, hrh);
         if(MMSConfiguration.DEBUG) {System.out.println(TAG+"Context \""+context+"\" is created");}
-        server.setExecutor(null); // creates a default executor
+
+
+        serverExecutor = Executors.newFixedThreadPool(NO_OF_THREADPOOL);
+        server.setExecutor(serverExecutor); 
+
         server.start();
 	}
 	
@@ -111,7 +137,9 @@ class MMSRcvHandler {
         server.createContext(fileDirectory+fileName, frh);
         if(MMSConfiguration.DEBUG) {System.out.println(TAG+"Context \""+fileDirectory+fileName+"\" is created");}
         //OONI
-        server.setExecutor(null); // creates a default executor
+
+        serverExecutor = Executors.newFixedThreadPool(NO_OF_THREADPOOL);
+        server.setExecutor(serverExecutor); 
         server.start();
 	}
 	
@@ -151,6 +179,14 @@ class MMSRcvHandler {
         if(MMSConfiguration.DEBUG) {System.out.println(TAG+"Context \""+fileDirectory+fileName+"\" is added");}
 	}
 	
+	public void stopRcv(int arg0) {
+		if (server == null) {
+			System.out.println(TAG+"Server is not created!");
+			return;
+		}
+		server.stop(0); 
+		serverExecutor.shutdownNow();
+	}
 	class HttpReqHandler implements HttpHandler {
     	
     	MMSClientHandler.RequestCallback myReqCallback;
@@ -191,9 +227,13 @@ class MMSRcvHandler {
     			if(MMSConfiguration.DEBUG) {System.out.println(TAG+"set headerfield[");}
     			for (Iterator keys = myHdr.keySet().iterator() ; keys.hasNext() ;) {
     				String key = (String) keys.next();
-    				ArrayList<String> value = (ArrayList<String>) myHdr.get(key);
-    				if(MMSConfiguration.DEBUG) {System.out.println(key+":"+value);}
-    				resHdr.put(key, value);
+
+    				List<String> valueList = (List<String>) myHdr.get(key);
+    				for (String value : valueList) {
+    					if(MMSConfiguration.DEBUG) {System.out.println(key+":"+value);}
+    				}
+    				resHdr.put(key, valueList);
+
     			}
     			if(MMSConfiguration.DEBUG) {System.out.println("]");}
     			
@@ -239,7 +279,9 @@ class MMSRcvHandler {
 	        	
 	            fileName = System.getProperty("user.dir")+fileName.trim();
 	            File file = new File (fileName);
-	            BASE64Encoder base64Encoder = new BASE64Encoder();
+
+	            Base64.Encoder base64Encoder = Base64.getEncoder();
+
 	            in = new FileInputStream(file);
 	
 	            byteOutStream=new ByteArrayOutputStream();
@@ -253,7 +295,9 @@ class MMSRcvHandler {
 	            }
 	
 	            byte fileArray[]=byteOutStream.toByteArray();
-	            encodeBytes=base64Encoder.encodeBuffer(fileArray).getBytes(); 
+
+	            encodeBytes=base64Encoder.encode(fileArray); 
+
         	} finally {
         		if (in != null) {
         			in.close();
