@@ -1,7 +1,4 @@
 package kr.ac.kaist.mms_client;
-
-import java.io.BufferedOutputStream;
-
 /* -------------------------------------------------------- */
 /** 
 File name : MMSSndHandler.java
@@ -32,14 +29,48 @@ Rev. history : 2018-04-23
 Version : 0.7.1
 	Removed IMPROPER_CHECK_FOR_UNUSUAL_OR_EXCEPTIONAL_CONDITION hazard.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+
+Rev. history : 2018-07-19
+Version : 0.7.2
+	Added API; message sender guarantees message sequence .
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2018-07-27
+Version : 0.7.2
+	Revised setting header field function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2018-08-01
+Version : 0.7.2
+	Updated header field setter function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-03-08
+Version : 0.8.1
+	Removed locator registration function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-05-22
+Version : 0.9.1
+	Add send function with timeout.
+Modifier : Yunho Choi (choiking10@kaist.ac.kr)
+
 */
 /* -------------------------------------------------------- */
 
+import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.ByteArrayInputStream;
 import java.io.FileOutputStream;
-import java.io.FileWriter;
+
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -49,7 +80,9 @@ import java.net.MalformedURLException;
 import java.net.ProtocolException;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -57,12 +90,12 @@ import java.util.Map;
 import java.util.Set;
 
 
-import sun.misc.BASE64Decoder;
-
 class MMSSndHandler {
 	
 	private String TAG = "[MMSSndHandler] ";
-	private final String USER_AGENT = "MMSClient/0.7.1";
+
+	private final String USER_AGENT = MMSConfiguration.USER_AGENT;
+
 	private String clientMRN = null;
 	private boolean isRgstLoc = false;
 	private MMSClientHandler.ResponseCallback myCallback;
@@ -70,17 +103,25 @@ class MMSSndHandler {
 		this.clientMRN = clientMRN;
 	}
 
-	@Deprecated
-	void registerLocator(int port) throws IOException {
-		isRgstLoc = true;
-		sendHttpPost("urn:mrn:smart-navi:device:mms1", "/registering", port+":2", null);
-	}
-	
+
+
 	void setResponseCallback (MMSClientHandler.ResponseCallback callback){
 		this.myCallback = callback;
 	}
+
+	void sendHttpPostWithTimeout(String dstMRN, String loc, String data, Map<String,List<String>> headerField, int timeout) throws IOException  {
+		sendHttpPost(dstMRN, loc, data, headerField, -1, timeout);
+	}
 	
 	void sendHttpPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField) throws IOException  {
+
+		sendHttpPost(dstMRN, loc, data, headerField, -1);
+	}
+	void sendHttpPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField, int seqNum) throws IOException  {
+		sendHttpPost(dstMRN, loc, data, headerField, seqNum, -1);
+	}
+	void sendHttpPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField, int seqNum, int timeout) throws IOException  {
+
 		String url = "http://"+MMSConfiguration.MMS_URL; // MMS Server
 		if (!loc.startsWith("/")) {
 			loc = "/" + loc;
@@ -88,16 +129,26 @@ class MMSSndHandler {
 		url += loc;
 		URL obj = new URL(url);
 		HttpURLConnection con = (HttpURLConnection) obj.openConnection();
-		
 		//add request header
 		con.setRequestMethod("POST");
 		con.setRequestProperty("User-Agent", USER_AGENT);
 		con.setRequestProperty("Accept-Charset", "UTF-8");
 		con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
 		con.setRequestProperty("srcMRN", clientMRN);
+
+		
 		if (dstMRN != null) {
 			con.setRequestProperty("dstMRN", dstMRN);
 		}
+		if (seqNum != -1) {
+			con.setRequestProperty("seqNum", ""+seqNum);
+		}
+		
+		if (timeout > 0) {
+			con.setConnectTimeout(timeout);
+			con.setReadTimeout(timeout);
+		}
+
 		//con.addRequestProperty("Connection","keep-alive");
 		
 		if (headerField != null) {
@@ -200,14 +251,16 @@ class MMSSndHandler {
 			inputMsg.append(inputLine+"\n");
 		}
 		
-		BASE64Decoder base64Decoder = new BASE64Decoder();
-        InputStream encoded = new ByteArrayInputStream(inputMsg.toString().getBytes("UTF-8"));
-        BufferedOutputStream decoded = new BufferedOutputStream(new FileOutputStream(System.getProperty("user.dir")+fileName));
+		Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] encoded = inputMsg.toString().getBytes("UTF-8");
+        byte[] decoded = null;
 
-        base64Decoder.decodeBuffer(encoded, decoded);      
+        base64Decoder.decode(encoded, decoded);      
 
-        encoded.close();
-        decoded.close();
+        BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(System.getProperty("user.dir")+fileName));
+        
+        bos.write(decoded);
+        bos.close();
 		in.close();
 		return fileName + " is saved";
 	}
@@ -215,6 +268,9 @@ class MMSSndHandler {
 	
 	//HJH
 	void sendHttpGet(String dstMRN, String loc, String params, Map<String,List<String>> headerField) throws Exception {
+		sendHttpGet(dstMRN, loc, params, headerField, -1);
+	}
+	void sendHttpGet(String dstMRN, String loc, String params, Map<String,List<String>> headerField, int seqNum) throws Exception {
 
 		String url = "http://"+MMSConfiguration.MMS_URL; // MMS Server
 		if (!loc.startsWith("/")) {
@@ -240,10 +296,17 @@ class MMSSndHandler {
 		con.setRequestProperty("User-Agent", USER_AGENT);
 		con.setRequestProperty("Accept-Charset", "UTF-8");
 		con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-		con.setRequestProperty("srcMRN", clientMRN);
+
+		if (clientMRN != null) {
+			con.setRequestProperty("srcMRN", clientMRN);
+		}
 		if (dstMRN != null) {
 			con.setRequestProperty("dstMRN", dstMRN);
 		}
+		if (seqNum != -1) {
+			con.setRequestProperty("seqNum", ""+seqNum);
+		}
+
 		if (headerField != null) {
 			con = addCustomHeaderField(con, headerField);
 		}
@@ -307,12 +370,44 @@ class MMSSndHandler {
 	private HttpURLConnection addCustomHeaderField (HttpURLConnection con, Map<String,List<String>> headerField) {
 		HttpURLConnection retCon = con;
 		if(MMSConfiguration.DEBUG) {System.out.println(TAG+"set headerfield[");}
-		for (Iterator keys = headerField.keySet().iterator() ; keys.hasNext() ;) {
+
+		for (Iterator<String> keys = headerField.keySet().iterator() ; keys.hasNext() ;) {
 			String key = (String) keys.next();
 			List<String> valueList = (List<String>) headerField.get(key);
-			for (String value : valueList) {
-				if(MMSConfiguration.DEBUG) {System.out.println(key+":"+value);}
-				retCon.addRequestProperty(key, value);
+			if (valueList != null) {
+				if (valueList.size() == 1) {
+					if(MMSConfiguration.DEBUG) {System.out.println(key+":"+valueList.get(0));}
+					retCon.addRequestProperty(key, valueList.get(0));
+				}
+				else if (valueList.size() > 1) { 
+					
+					StringBuilder valueBuf = new StringBuilder();
+					if(MMSConfiguration.DEBUG) {System.out.print(key+":[");}
+					valueBuf.append("[");
+					int i = 0;
+					for (i = 0 ; i < valueList.size() ; i++) {
+						String value = valueList.get(i);
+						if(MMSConfiguration.DEBUG) {System.out.print(value);}
+						//valueBuf.append("\""+value+"\"");
+						valueBuf.append(value);
+						if (i != valueList.size()-1) {
+							if(MMSConfiguration.DEBUG) {System.out.print(",");}
+							valueBuf.append(",");
+						}
+					}
+					if(MMSConfiguration.DEBUG) {System.out.println("]");}
+					valueBuf.append("]");
+					retCon.addRequestProperty(key, valueBuf.toString());
+				}
+				else {
+					if(MMSConfiguration.DEBUG) {System.out.println(key+":");}
+					retCon.addRequestProperty(key, "");
+				}
+			}
+			else if (valueList == null) {
+				if(MMSConfiguration.DEBUG) {System.out.println(key+":null");}
+				retCon.addRequestProperty(key, null);
+
 			}
 		}
 		if(MMSConfiguration.DEBUG) {System.out.println("]");}
