@@ -1,5 +1,4 @@
 package kr.ac.kaist.mms_client;
-
 /* -------------------------------------------------------- */
 /** 
 File name : SecureMMSRcvHandler.java
@@ -21,6 +20,18 @@ Rev. history : 2018-04-23
 Version : 0.7.1
 	Removed FORWARD_NULL, RESOURCE_LEAK, IMPROPER_CHECK_FOR_UNUSUAL_OR_EXCEPTIONAL_CONDITION hazard.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)	
+
+
+Rev. history : 2018-07-27
+Version : 0.7.2
+	Revised setting header field function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
 */
 /* -------------------------------------------------------- */
 
@@ -39,6 +50,7 @@ import java.nio.charset.Charset;
 import java.security.KeyStore;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -53,7 +65,6 @@ import com.sun.net.httpserver.HttpsConfigurator;
 import com.sun.net.httpserver.HttpsParameters;
 import com.sun.net.httpserver.HttpsServer;
 
-import sun.misc.BASE64Encoder;
 
 class SecureMMSRcvHandler {
 	HttpsServer server = null;
@@ -65,7 +76,9 @@ class SecureMMSRcvHandler {
 	//OONI
 
 	private String TAG = "[SecureMMSRcvHandler] ";
-	private static final String USER_AGENT = "MMSClient/0.7.1";
+
+	private static final String USER_AGENT = MMSConfiguration.USER_AGENT;
+
 	private String clientMRN = null;
 	
 	SecureMMSRcvHandler(int port, String jksDirectory, String jksPassword) throws Exception{
@@ -162,7 +175,9 @@ class SecureMMSRcvHandler {
 						} catch (NoSuchAlgorithmException e) {
 							// TODO Auto-generated catch block
 			                System.err.println( "Failed to create HTTPS port" );
-							e.printStackTrace();
+
+							//e.printStackTrace();
+
 						}
 		                
 		            
@@ -253,9 +268,13 @@ class SecureMMSRcvHandler {
     			if(MMSConfiguration.DEBUG) {System.out.println(TAG+"set headerfield[");}
     			for (Iterator keys = myHdr.keySet().iterator() ; keys.hasNext() ;) {
     				String key = (String) keys.next();
-    				ArrayList<String> value = (ArrayList<String>) myHdr.get(key);
-    				if(MMSConfiguration.DEBUG) {System.out.println(key+":"+value);}
-    				resHdr.put(key, value);
+
+    				List<String> valueList = (List<String>) myHdr.get(key);
+    				for (String value : valueList) {
+    					if(MMSConfiguration.DEBUG) {System.out.println(key+":"+value);}
+    				}
+    				resHdr.put(key, valueList);
+
     			}
     			if(MMSConfiguration.DEBUG) {System.out.println("]");}
     			
@@ -300,7 +319,9 @@ class SecureMMSRcvHandler {
 	        	
 	            fileName = System.getProperty("user.dir")+fileName.trim();
 	            File file = new File (fileName);
-	            BASE64Encoder base64Encoder = new BASE64Encoder();
+
+	            Base64.Encoder base64Encoder = Base64.getEncoder();
+
 	            in = new FileInputStream(file);
 	
 	            byteOutStream=new ByteArrayOutputStream();
@@ -314,7 +335,9 @@ class SecureMMSRcvHandler {
 	            }
 	
 	            byte fileArray[]=byteOutStream.toByteArray();
-	            encodeBytes=base64Encoder.encodeBuffer(fileArray).getBytes(); 
+
+	            encodeBytes=base64Encoder.encode(fileArray);  
+
         	} finally {
         		if (in != null) {
         			in.close();
